# PyPRANSAC

./: pRANSAC.py  point.py  show_vtk.py
egbis/: CMakeLists.txt  egbis.cpp  egbis.h  test.py
egbis/egbis/: convolve.h  filter.h  misc.h  segment-graph.cpp  segment-graph.h  segment-image.cpp  segment-image.h
egbis/iins/: inregral_image2D.cpp  inregral_image2D.h  integral_image_normal.cpp  integral_image_normal.h
egbis/include/egbis/: segment-image.h
